kubernetes/deployment_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Nest.js application deployment
  labels:
    app: nestapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nestapp
  template:
    metadata:
      labels:
        app: nestapp
    spec:
      containers:
        - name: nestapp
          image: kaashntr/devops-test:latest
