kubernetes/deployment_redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: "redis:alpine"
        ports:
        - containerPort: 6379
        command: ["redis-server"]
        args: ["--requirepass", "${REDIS_PASSWORD}"]
