kubernetes/service_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
